<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:dividerPadding="5dp"
        android:divider="?android:listDivider"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/winner_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textColor="#32cd32"
                android:textSize="20sp"
                android:visibility="invisible"
                android:text="@string/winner" />

            <TextView
                android:id="@+id/team_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/score_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:textSize="50sp"
                android:textColor="@android:color/black"
                tools:text="@string/score_a" />

            <Button
                android:id="@+id/add_3_a"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#c2c2c2"
                android:textColor="@android:color/black"
                android:text="@string/add_3_a" />
            <Button
                android:id="@+id/add_2_a"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:backgroundTint="#c2c2c2"
                android:textColor="@android:color/black"
                android:text="@string/add_2_a" />
            <Button
                android:id="@+id/free_throw_a"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#c2c2c2"
                android:textColor="@android:color/black"
                android:text="@string/free_throw_a" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/winner_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textColor="#32cd32"
                android:textSize="20sp"
                android:visibility="invisible"
                android:text="@string/winner" />

            <TextView
                android:id="@+id/team_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/score_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:textSize="50sp"
                android:textColor="@android:color/black"
                tools:text="@string/score_b" />

            <Button
                android:id="@+id/add_3_b"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#c2c2c2"
                android:textColor="@android:color/black"
                android:text="@string/add_3_b" />
            <Button
                android:id="@+id/add_2_b"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:backgroundTint="#c2c2c2"
                android:textColor="@android:color/black"
                android:text="@string/add_2_b" />
            <Button
                android:id="@+id/free_throw_b"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#c2c2c2"
                android:textColor="@android:color/black"
                android:text="@string/free_throw_b" />
        </LinearLayout>



    </LinearLayout>
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#c2c2c2"
        android:textColor="@android:color/black"
        android:text="@string/reset"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/game_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#ffc862"
            android:textColor="@android:color/black"
            android:text="@string/game_over"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#ffc862"
            android:textColor="@android:color/black"
            android:text="@string/display" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#ffc862"
        android:textColor="@android:color/black"
        android:text="@string/save"
        android:visibility="invisible"/>

</LinearLayout>