<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center"
    tools:context=".SaveActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:dividerPadding="5dp"
        android:gravity="center">

        <TextView
            android:id="@+id/save_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/saved"
            android:textColor="#32cd32"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="30dp"
            android:textSize="40sp"
            android:text="@string/name_of_app"
            android:textColor="#5d5d5d" />

        <TextView
            android:id="@+id/team_a_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:text="@string/team_a_name"
            android:textColor="#5d5d5d" />

        <EditText
            android:id="@+id/team_a_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/team_a_name_hint"
            android:inputType="text"/>

        <TextView
            android:id="@+id/team_b_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text="@string/team_b_name"
            android:textColor="#5d5d5d" />

        <EditText
            android:id="@+id/team_b_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/team_b_name_hint"
            android:inputType="text"/>

        <Button
            android:id="@+id/new_game"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:backgroundTint="#c2c2c2"
            android:text="@string/new_game"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/game_history"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#c2c2c2"
            android:text="@string/history_games"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>